@@ -5,5 +5,6 @@
 * Fixed warnings and notices in level and subscription text widgets
 * Fixed warnings and notices in login widget
 * Fixed rendering issue with login widget and made it rendering as widget
+* Fixed bug with infinite loop which appears if subscription period is set inappropriate
 * Implemented ability to add a title and "lost password" link to the login widget
 * Reworked registration page workflow
